--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,4 @@ description = "Python selenium Wrapper"
 readme = "README.md"
 authors = [{ name = "Real Python", email = "info@realpython.com" }]
 [project.urls]
-Homepage = "https://github.com/realpython/reader"
+Homepage = "https://github.com/srinivasaraojyothi/seleniumpythonactionbot.git"
