--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = pyseleniumbot
+name = pyallied
 version = 1.0.12
 author = srinivasaraojyothi
 author_email = srinivasaraojyothi@gmail.com
-description = pu
+description = package.__doc__.strip().split('\n')[0]
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/srinivasaraojyothi/seleniumpythonactionbot.git
