--- a/requirements.txt
+++ b/requirements.txt
@@ -84,7 +84,7 @@ numpy==1.22.4
 oauthlib==3.2.0
 odfpy==1.4.1
 olefile==0.46
-opencv-python==4.6.0.66
+opencv-python==4.5.5.64
 opencv-python-headless==4.5.4.60
 openpyxl==3.0.10
 outcome==1.1.0
@@ -107,7 +107,7 @@ polling2==0.5.0
 progress==1.6
 psutil==5.9.1
 py==1.11.0
-pyallied==1.0.3
+pyallied==1.0.19
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.8.0
@@ -139,8 +139,7 @@ python-pptx==0.6.21
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 PyWavelets==1.3.0
-pywin32==300
-pywin32-ctypes==0.2.0
+pypiwin32==223
 PyYAML==5.4.1
 readme-renderer==35.0
 requests==2.27.1
